src/App.css
/* App.css */
.navbar {
  /* background-color: white; */
  padding: 10px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.hamburger {
  cursor: pointer;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  height: 35px;
  width: 40px;
  padding: 10px;
}

.hamburger div {
  /* background-color: #333; Dark color for contrast */
  height: 4px; /* Height of each line */
  width: 100%; /* Width of each line */
  border-radius: 2px; /* Optional: Rounded corners for the lines */
}

/* .hamburger:hover div {
  background-color: #555; Slightly different color on hover for interactivity
} */

#background-video {
  position: absolute; /* Positioned relative to the viewport */
  top: 50%; /* Center vertically */
  left: 50%; /* Center horizontally */
  transform: translate(-50%, -50%); /* Adjust the position to achieve true centering */
  min-width: 100%;
  min-height: 100%;
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: relative;
  z-index: 10;
  padding: 20px;
  margin: auto;
  background-color: rgba(255, 255, 255, 0.8);
  background: linear-gradient(135deg, #322E2D, #585858);
  color: white;
  width: calc(100% - 40px);
  max-width: 800px;
  box-sizing: border-box;
  border-radius: 10px;
  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); /* Increased shadow size and darkness */
  transition: box-shadow 0.3s, transform 0.3s;
  font-family: 'Arial', sans-serif;
  line-height: 1.6;
}


.content:hover {
  transform: scale(1.05);
}


.menu {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: absolute;
  background-color: #333;
  top: 50px;
  width: 100%;
  left: 0;
  transform: translateX(-100%);
  transition: transform 0.3s ease-in-out;
}

.menu.open {
  transform: translateX(0);
}

.menu a {
  color: white;
  padding: 10px;
  text-decoration: none;
  text-align: center;
  width: 100%;
}

.menu a:hover {
  background-color: #ddd;
  color: black;
}

.container {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  width: 100%; 
}

.project-card {
  margin: auto auto 15px auto; 
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: relative;
  z-index: 10;
  padding: 20px;
  background-color: rgba(255, 255, 255, 0.8);
  background: linear-gradient(135deg, #322E2D, #585858);
  color: white;
  width: calc(100% - 40px);
  max-width: 800px;
  box-sizing: border-box;
  border-radius: 10px;
  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); /* Increased shadow size and darkness */
  transition: box-shadow 0.3s, transform 0.3s;
  font-family: 'Arial', sans-serif;
  line-height: 1.6;
}

@keyframes logoFadeInScaleUp {
  from {
    opacity: 0;
    transform: scale(0.9);
  }
  to {
    opacity: 1;
    transform: scale(1);
  }
}

.logo-animation {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  animation: logoFadeInScaleUp 1s ease-out forwards;
  width: 30%; /* Increase the size of the logo */
}

.particles-container {
  width: 100px;
  margin: auto;
  display: block;
  
  

  
}

@media (max-width: 600px) {
  .logo-animation {
    width: 50%; /* Adjust for mobile */
    max-width: 200px; /* Control the maximum size on mobile */
  }
}

